# music-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
app/: config.py  deps.py  main.py
app/api/: errors.py
app/auth/: api_keys.py
app/db/: enums.py
app/middleware/: rate_limit.py
app/models/: __init__.py  conversation.py  message.py  search_request.py
app/music/: enums.py  tags.py
app/repositories/: conversations.py  messages.py  search_requests.py
app/schemas/: chat.py  common.py  word_tools.py
app/services/: chat_service.py  word_tools_service.py
app/utils/: text.py
deploy/: .env.production.example  README.md  docker-compose.prod.yml
deploy/edge/: README.md  docker-compose.yml
deploy/nginx/: nginx.conf
deploy/scripts/: deploy.sh  init-letsencrypt.sh  init-server.sh  renew-certs.sh
migrations/: env.py
migrations/versions/: 0001_init.py  0001_music_schema.py  0002_music_schema.py  0002_music_seed_pricing.py  0003_jobs_pipeline_extensions.py  0003_music_seed_pricing.py  (+2 more)
prompts/: antonyms.txt  definitions.txt  descriptive_words.txt  homophones.txt  match_consonants.txt  match_letters.txt  near_rhymes.txt  phrase_rhymes.txt  phrases.txt  related_words.txt  rhymes.txt  rhymes_advanced.txt  similar_sounding.txt  similarly_spelled.txt  synonyms.txt  unscramble.txt
scripts/: _oneshot_gen.py  e2e_prod.py  migrate_to_local_storage.py  rewrite_seed_to_local.py  seed_beats_3x.py  seed_content.py  seed_samples_3x.py  smoke.py
tests/: conftest.py
(+100 files in other folders)
