[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "music-backend"
version = "0.1.0"
description = "Music generation backend via fal.ai with token wallet + Adapty/RuStore subscriptions"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
    "python-json-logger>=2.0",
    "orjson>=3.10",
    "anyio>=4.4",
    "python-multipart>=0.0.9",
    "mutagen>=1.47",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "asgi-lifespan>=2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
ignore_missing_imports = true
